<resources>
    <string name="app_name">目的地</string>

    <string name="guojiaganlan">国家概览</string>
    <string name="ganlan">概览</string>
    <string name="rujingkazhinan">入境卡指南</string>
    <string name="fengsu">风俗</string>
    <string name="anquan">安全</string>
    <string name="jiankang">健康</string>
    <string name="jieqing">节庆</string>
    <string name="remenchengshi">热门城市</string>
    <string name="remen">热门</string>
    <string name="yazhou">亚洲</string>
    <string name="ouzhou">欧洲</string>
    <string name="feizhou">非洲</string>
    <string name="beimeizhou">北美洲</string>
    <string name="nanmeizhou">南美洲</string>
    <string name="dayangzhou">大洋洲</string>
    <string name="zhankaigengduo">查看更多</string>
    <string name="suoyouchengshi">查看所有城市</string>
    <string name="chengshigailan">城市概览</string>
    <string name="bendijiaotong">本地交通</string>
    <string name="jingdian">景点</string>
    <string name="canyin">餐饮</string>
    <string name="zhusu">住宿</string>
    <string name="gouwu">购物</string>
    <string name="xingqudian">兴趣点</string>
    <string name="morenxianshi">国家、城市、景点</string>
    <string name="zuijinsousuo">最近搜索</string>
    <string name="qingchulishi">清除历史</string>
    <string name="remenmudidi">热门目的地</string>
    <string name="quxiao">取消</string>
    <string name="titleTvRight1">取消</string>
    <string name="daohang">导航</string>
    <string name="wenluka">问路卡</string>

    <!--toast-->
    <string name="toast_wangluocuowu">服务器出现异常，请稍后重试</string>
    <string name="toast_wushuju">没有找到相关信息</string>
    <string name="toast_zanwuxinxi">暂无信息</string>
    <string name="toast_wuwangluo">当前无网络，请连网操作</string>

    <string name="toast_lianwang">请连网查看</string>

    <string name="toast_lixian">离线状态不支持搜索</string>
    <string name="lixiantishi2">离线包已下载，快去安装吧！</string>
    <string name="lixiantishi3">已支持离线浏览，快去下载吧！</string>
    <string name="install">去安装</string>
    <string name="download">去下载</string>
    <string name="ignore">忽略</string>
</resources>
