<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#e3e3e3">
<RadioGroup
    android:id="@+id/rg_type"
    android:layout_width="match_parent"
    android:layout_height="@dimen/text_size100"
    android:orientation="horizontal">

    <RadioButton
        android:id="@+id/tv_jin_dian"
        android:layout_width="@dimen/px0"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/jingdian"
        android:textColor="@drawable/radio_select"
        android:textSize="@dimen/text_size24"
        android:gravity="center"
        android:button="@null"  />
    <RadioButton
        android:id="@+id/tv_can_yin"
        android:layout_width="@dimen/px0"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/canyin"
        android:textColor="@drawable/radio_select"
        android:textSize="@dimen/text_size24"
        android:gravity="center"
        android:button="@null"/>
    <RadioButton
        android:id="@+id/tv_gou_wu"
        android:layout_width="@dimen/px0"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/gouwu"
        android:textColor="@drawable/radio_select"
        android:textSize="@dimen/text_size24"
        android:gravity="center"
        android:button="@null"/>
    <RadioButton
        android:id="@+id/tv_zhu_su"
        android:layout_width="@dimen/px0"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/zhusu"
        android:textColor="@drawable/radio_select"
        android:textSize="@dimen/text_size24"
        android:gravity="center"
        android:button="@null"/>
</RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/px0"
        android:layout_weight="1"
        android:background="#80000000"></LinearLayout>
</LinearLayout>