<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20px"
        android:layout_marginRight="20px"
        android:background="@drawable/popu_background"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_wenzi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lixiantishi3"
            android:textSize="20dp"
            android:lineSpacingExtra="8px"
            android:layout_marginLeft="32px"
            android:layout_marginRight="32px"
            android:gravity="center"
            android:layout_marginTop="64px"
            android:layout_marginBottom="64px"
            android:textColor="#333"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#ccc"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="96px">
        <TextView
            android:id="@+id/tv_hulue"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/ignore"
            android:singleLine="true"
            android:textColor="#999999"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_height="match_parent" />
        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="#ccc"/>
        <TextView
            android:id="@+id/tv_xiazai"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/download"
            android:singleLine="true"
            android:textColor="#fe5000"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_height="match_parent" />
    </LinearLayout>
    </LinearLayout>
</LinearLayout>