<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.SearchPageActivity">


    <TextView
        android:id="@+id/tv_recent_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/text_size25"
        android:layout_marginLeft="@dimen/text_size20"
        android:layout_marginTop="@dimen/text_size25"
        android:text="@string/zuijinsousuo"
        android:textColor="#b7b7b7"
        android:textSize="@dimen/px24"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <!--app:layout_constraintTop_toBottomOf="@id/sv_search" />-->

    <TextView
        android:id="@+id/tv_clear_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/text_size20"
        android:layout_marginTop="@dimen/text_size25"
        android:text="@string/qingchulishi"
        android:textColor="#eb5b4e"
        android:textSize="@dimen/text_size24"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <!--app:layout_constraintTop_toBottomOf="@id/sv_search" />-->

    <View
        android:id="@+id/view1"
        android:layout_width="@dimen/px0"
        android:layout_height="@dimen/text_size1"
        android:layout_marginTop="@dimen/text_size25"
        android:background="#e3e3e3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_recent_search" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_record"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/view1"/>

    <View
        android:id="@+id/view2"
        android:layout_width="@dimen/px0"
        android:layout_height="@dimen/text_size12"
        android:background="#e9e9e9"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rv_record" />

    <TextView
        android:id="@+id/tv_hot_destination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/px20"
        android:layout_marginTop="@dimen/text_size25"
        android:text="@string/remenchengshi"
        android:textColor="#b7b7b7"
        android:textSize="@dimen/text_size24"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view2" />

    <View
        android:id="@+id/view3"
        android:layout_width="@dimen/px0"
        android:layout_height="@dimen/text_size1"
        android:layout_marginTop="@dimen/text_size25"
        android:background="#e3e3e3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_hot_destination" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_hot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view3"></android.support.v7.widget.RecyclerView>
</android.support.constraint.ConstraintLayout>